some_yaml/es-ingest.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: es-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
 - host: 
   http:
     paths:
     - path: /
       backend:
         serviceName: elasticsearch-ingest
         servicePort: 9200
